# porkg

./: .gitignore  Cargo.toml  NOTICE  crates.nix  flake.nix  go.mod  go.sum  justfile  rust-toolchain.toml
cmd/porkg/: porkg.go
crates/porkg-daemon/: Cargo.toml
crates/porkg-daemon/src/: backend.rs  config.rs  error.rs  frontend.rs  main.rs
crates/porkg-daemon/src/frontend/: serve.rs
crates/porkg-daemon/src/frontend/api/: v1.rs
crates/porkg-daemon/src/frontend/api/v1/: build.rs
crates/porkg-linux/: Cargo.toml
crates/porkg-linux/src/: clone.rs  fs.rs  lib.rs  net.rs  proc.rs  sandbox.rs
crates/porkg-linux/src/sandbox/: zygote.rs
crates/porkg-linux/tests/: clone_basic.rs  clone_err.rs  clone_fallback.rs  clone_parent.rs  fs_bind.rs  fs_bind_ro.rs  fs_mount.rs  fs_pivot.rs  proc_clone_fd.rs
crates/porkg-linux/tests/common/: mod.rs
crates/porkg-model/: Cargo.toml
crates/porkg-model/src/: base32.rs  hashing.rs  lib.rs  package.rs
crates/porkg-model/src/hashing/: supported.rs
crates/porkg-private/: Cargo.toml
crates/porkg-private/src/: debug.rs  future.rs  io.rs  lib.rs  mem.rs  sandbox.rs  ser.rs  string.rs
crates/porkg-private/src/mem/: owned_pooled_item.rs  pooled_item.rs
crates/porkg-private/src/os/: proc.rs
crates/porkg-private/tests/: process_drop.rs  process_drop_kill.rs
crates/porkg-private/tests/common/: mod.rs
crates/porkg-test/: Cargo.toml
crates/porkg-test-macros/: Cargo.toml
crates/porkg-test-macros/src/: fork.rs  lib.rs
crates/porkg-test/src/: fork.rs  lib.rs
internal/worker/: linux.go
internal/worker/proto/: linux.go  protomap.go
internal/zygote/: linux.go
internal/zygote/linux/: zygote.go
notes/: fs-layout.md
notices/: tar  youki
test-store/: .gitignore  init.sh  test.sh
test-store/pkg/by-hash/blake3-baaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa/src/: porkg.toml
test-store/src/test/blake3-aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa/: build.sh  install.sh  porkg.toml
