[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
thiserror = "1.0.50"
anyhow = "1.0.75"

nix = { version = "0.28.0", default-features = false }
procfs = { version = "0.16.0", default-features = false }
prctl = "1.0.0"
signal-hook = "0.3.17"
bitcode = "0.6.0"
which = "5.0.0"

tracing = "0.1.40"
tracing-core = "0.1.32"
tracing-subscriber = "0.3.18"
test-log = "0.2.15"

parking_lot = "0.12.1"
dashmap = "5.5.3"
bumpalo = "3.14.0"
once_cell = "1.19.0"

tokio = {version = "1.35.0", default-features = false}
futures = "0.3.29"

bytes = "1.5.0"
bitflags = "2.4.1"
uuid = "1.6.1"
rand = "0.8.5"
blake3 = "1.5.0"
url = "2.5.0"
data-encoding = { version = "2.5.0", default-features = false }
data-encoding-macro = "0.1.14"

clap = {version = "4.4.11", default-features = false }
argfile = "0.1.6"

serde = "1.0.193"
serde_test = "1.0.176"
toml = "0.8.8"
serde_json = "1.0.108"
config = "0.13.4"

derive_more = "0.99.17"
castaway = "0.2.2"

ntest = "0.9.2"
pretty_assertions = "1.4.0"

porkg-private.path = "./crates/porkg-private"

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = "off"

[profile.dev.package."*"]
opt-level = 3
codegen-units = 1
debug = false
incremental = false

[profile.dev.build-override]
opt-level = 3
codegen-units = 1
debug = false
incremental = false

[profile.release]
lto = "fat"
incremental = false
codegen-units = 1

[profile.release.build-override]
opt-level = 3
codegen-units = 1
debug = false
incremental = false
