[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
thiserror = "1.0.50"
anyhow = "1.0.75"
bitflags = "2.4.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

nix = { version = "0.29.0", default-features = false }
caps = "0.5.5"
prctl = "1.0.0"
signal-hook = "0.3.17"
uds = "0.4.2"
procfs = { version = "0.16.0", default-features = false }

async-lock = "3.3.0"

async-io = "2.3.2"
async-std = "1.12.0"
bytes = "1.6.0"
bincode = "1.3.3"
serde = { version = "1.0.198", default-features = false }
once_cell = "1.19.0"

uuid = "1.6.1"
rand = "0.8.5"
blake3 = "1.5.0"
url = "2.5.0"
data-encoding = { version = "2.5.0", default-features = false }
data-encoding-macro = "0.1.14"

clap = {version = "4.4.11", default-features = false }
argfile = "0.1.6"
which = "6.0.1"

pretty_assertions = "1.4.0"
test-log = "0.2.15"

porkg-private.path = "./crates/porkg-private"
porkg-linux.path = "./crates/porkg-linux"

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = "off"

[profile.dev.package."*"]
opt-level = 3
codegen-units = 1
debug = false
incremental = false

[profile.dev.build-override]
opt-level = 3
codegen-units = 1
debug = false
incremental = false

[profile.release]
lto = "fat"
incremental = false
codegen-units = 1

[profile.release.build-override]
opt-level = 3
codegen-units = 1
debug = false
incremental = false
