[package]
name = "porkg-linux"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror.workspace = true
anyhow.workspace = true

nix = { workspace = true, features = [
# Clone
"sched", 
"process",
"mman",
"resource",
"feature",
# Mount
"mount",
"fs",
# User
"user"
] }
procfs = { workspace = true }

bitflags.workspace = true
tracing.workspace = true
porkg-private.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
ntest.workspace = true
tracing-subscriber.workspace = true
test-log = { workspace = true, features = [ "trace" ] }
