[package]
name = "porkg-linux"
version = "0.1.0"
edition = "2021"

[features]
__itest = []

[dependencies]
porkg-private.workspace = true

thiserror.workspace = true
anyhow.workspace = true
bitflags = { workspace = true, features = [ "serde" ] }
tracing.workspace = true

tokio.workspace = true
bytes.workspace = true
async-lock.workspace = true

nix = { workspace = true, features = [
# Clone
"sched", 
"process",
"mman",
"resource",
"feature",
# Mount
"mount",
"fs",
# User
"user"
] }
procfs.workspace = true
uds.workspace = true
caps.workspace = true
which.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
tracing-subscriber.workspace = true
test-log = { workspace = true, features = [ "trace" ] }
porkg-test.workspace = true
