[package]
name = "porkg-private"
version = "0.1.0"
edition = "2021"

[features]
__itest = []

[dependencies]
tracing.workspace = true
bitflags.workspace = true
anyhow.workspace = true
thiserror.workspace = true

tokio = { workspace = true, features = ["net"] }
bytes.workspace = true
once_cell.workspace = true
flume.workspace = true
pin-project-lite.workspace = true

bincode.workspace = true
serde = { workspace = true, features = ["derive"] }

nix = { workspace = true, features = [
# proc
"process",
"signal",
"user"
] }
uds = { workspace = true, features = [ "tokio", "async_trait" ] }

[dev-dependencies]
pretty_assertions.workspace = true
tracing-subscriber.workspace = true
test-log = { workspace = true, features = [ "trace" ] }
signal-hook.workspace = true
tokio = { workspace = true, features = [ "rt", "macros", "time" ] }

[[test]]
# this test is pretty slow
name = "process_drop_kill"
required-features = [ "__itest" ]
